<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <modules>
        <module>lk-manager-web</module>
        <module>lk-manager-data</module>
    </modules>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.1</version>
        <relativePath/> <!-- lookup parent from repository -->




    </parent>
    <groupId>LKManager</groupId>
    <artifactId>LKManager</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>LKManager</name>
    <description>Demo project for Spring Boot</description>
    <properties>
        <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
        <java.version>18</java.version>


            <!-- The main class to start by executing "java -jar" -->
     <!--       <start-class>LKManagerApplication</start-class>-->

    </properties>
    <dependencies>
     <!--   <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
        </dependency>-->


        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-autoconfigure</artifactId>
            <version>2.7.3</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20180130</version>
        </dependency>







    </dependencies>

    <!--<build>

        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>

                <configuration>
                    &lt;!&ndash;	<autoVersionSubmodules>true</autoVersionSubmodules> &ndash;&gt;
                    <goals>
                        install
                    </goals>

                </configuration>
            </plugin>







            &lt;!&ndash;  <plugin>

               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-jar-plugin</artifactId>
               <version>3.2.2</version>
               <configuration>
                   <archive>
                       <manifest>
                          <addClasspath>true</addClasspath>
                           <classpathPrefix>lib/</classpathPrefix>
                           <mainClass>LKManager.LKManagerApplication</mainClass>
                       </manifest>
                   </archive>
               </configuration>
           </plugin>&ndash;&gt;

            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>LKManager.LKManagerApplication</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>



        &lt;!&ndash;    <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>3.3.0</version>

                <configuration>
                    <container>
                        <mainClass>LKManager.LKManagerApplication</mainClass>
                        <ports>
                            <port>8080</port>
                        </ports>
                    </container>
                    <to>
                        <image>lkm</image>
                    </to>
                </configuration>
            </plugin>&ndash;&gt;

        </plugins>
    </build>-->



    <build>
        <plugins>






            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>LKManager/LKManagerApplication</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
            </plugin>


            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <!--	<plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                </plugin>-->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>

                <configuration>
                    <!--	<autoVersionSubmodules>true</autoVersionSubmodules> -->
                    <goals>
                        install
                    </goals>

                </configuration>
            </plugin>



        </plugins>

    </build>
</project>
